--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@contentful/rich-text-react-renderer": "^15.4.0",
     "classnames": "2.3.1",
     "concurrently": "^7.6.0",
+    "contentful": "^9.2.13",
     "date-fns": "2.28.0",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.5",
